{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 45,
  "lineage": "4480cd2e-52bb-e18d-85f9-a47b4e4ee733",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:vpc/vpc-0f20e3b9dea1d682b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00bdec4aa993272a9",
            "default_route_table_id": "rtb-00cd43f087e913ad2",
            "default_security_group_id": "sg-0f04ba075791894ba",
            "dhcp_options_id": "dopt-031c20cc4f36e62ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f20e3b9dea1d682b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cd43f087e913ad2",
            "owner_id": "751910243706",
            "tags": {
              "Name": "default vpc"
            },
            "tags_all": {
              "Name": "default vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecee02d1619afe6a",
            "association_id": "eipassoc-04655e81c84ed527b",
            "domain": "vpc",
            "id": "eipalloc-0ecee02d1619afe6a",
            "instance": "i-06709218194a0a6c7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-03e2085b6d7b89382",
            "private_dns": "ip-172-31-44-13.us-west-2.compute.internal",
            "private_ip": "172.31.44.13",
            "public_dns": "ec2-52-33-140-117.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.140.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default_vpc",
            "aws_instance.app_server",
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05572e392e80aee89",
            "arn": "arn:aws:ec2:us-west-2:751910243706:instance/i-06709218194a0a6c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06709218194a0a6c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e2085b6d7b89382",
            "private_dns": "ip-172-31-44-13.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.13",
            "public_dns": "ec2-52-33-140-117.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.140.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d230aaf08814957f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": ["ec2 security group"],
            "source_dest_check": true,
            "subnet_id": "subnet-0c824410dd2828a79",
            "tags": {
              "Name": "AllianceServerInstance"
            },
            "tags_all": {
              "Name": "AllianceServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": ["sg-053be88d738739c1d"]
          },
          "dependencies": [
            "aws_default_vpc.default_vpc",
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:security-group/sg-053be88d738739c1d",
            "description": "allow access on ports 80 and 22",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053be88d738739c1d",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "751910243706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws server sg"
            },
            "tags_all": {
              "Name": "aws server sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f20e3b9dea1d682b"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_default_vpc.default_vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:security-group/sg-01afa8ca45d833d48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-01afa8ca45d833d48",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "alliance_rds",
            "name_prefix": "",
            "owner_id": "751910243706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alliance_rds"
            },
            "tags_all": {
              "Name": "alliance_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-015b3fd41a9398f01"
          },
          "sensitive_attributes": [],
          "dependencies": ["module.vpc.aws_vpc.this"]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:internet-gateway/igw-0639da5f8e8212972",
            "id": "igw-0639da5f8e8212972",
            "owner_id": "751910243706",
            "tags": {
              "Name": "alliance"
            },
            "tags_all": {
              "Name": "alliance"
            },
            "vpc_id": "vpc-015b3fd41a9398f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0639da5f8e8212972",
            "id": "r-rtb-012c48daa85a9193a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012c48daa85a9193a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:route-table/rtb-012c48daa85a9193a",
            "id": "rtb-012c48daa85a9193a",
            "owner_id": "751910243706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0639da5f8e8212972",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alliance-public"
            },
            "tags_all": {
              "Name": "alliance-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-015b3fd41a9398f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03791c9c75096478e",
            "route_table_id": "rtb-012c48daa85a9193a",
            "subnet_id": "subnet-0872ab2be2fc70e7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074ea729f19a386ea",
            "route_table_id": "rtb-012c48daa85a9193a",
            "subnet_id": "subnet-06fa94d8bc1a229af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf47565111ebdc12",
            "route_table_id": "rtb-012c48daa85a9193a",
            "subnet_id": "subnet-099b07d6fd78e541a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:subnet/subnet-0872ab2be2fc70e7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0872ab2be2fc70e7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "751910243706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alliance-public-us-west-2a"
            },
            "tags_all": {
              "Name": "alliance-public-us-west-2a"
            },
            "vpc_id": "vpc-015b3fd41a9398f01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:subnet/subnet-06fa94d8bc1a229af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa94d8bc1a229af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "751910243706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alliance-public-us-west-2b"
            },
            "tags_all": {
              "Name": "alliance-public-us-west-2b"
            },
            "vpc_id": "vpc-015b3fd41a9398f01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:subnet/subnet-099b07d6fd78e541a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b07d6fd78e541a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "751910243706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alliance-public-us-west-2c"
            },
            "tags_all": {
              "Name": "alliance-public-us-west-2c"
            },
            "vpc_id": "vpc-015b3fd41a9398f01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:751910243706:vpc/vpc-015b3fd41a9398f01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f94acb2f3632270",
            "default_route_table_id": "rtb-0c6e3734813d858b1",
            "default_security_group_id": "sg-08ea7ea067b1192f3",
            "dhcp_options_id": "dopt-031c20cc4f36e62ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015b3fd41a9398f01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6e3734813d858b1",
            "owner_id": "751910243706",
            "tags": {
              "Name": "alliance"
            },
            "tags_all": {
              "Name": "alliance"
            }
          }
        }
      ]
    }
  ]
}